# ssb-patchql-android

./: .gitignore  custom_setup.sh  jitpack.yml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/graphql/com/sunrisechoir/graphql/: authorProfile.graphql  currentAuthor.graphql  post.graphql  posts.graphql  postsCount.graphql  schema.json  thread.graphql  threadForPost.graphql  threads.graphql  threadsSummary.graphql
android/src/main/graphql/com/sunrisechoir/rngraphql/: .graphqlconfig  process.graphql  threads.graphql
android/src/main/kotlin/com/sunrisechoir/patchql/: Patchql.kt  PatchqlApollo.kt  SingletonHolder.kt
android/src/main/kotlin/com/sunrisechoir/rnpatchql/: Native.kt
rust/: Cargo.toml
rust/src/: android.rs  common.rs  ios.rs  lib.rs
